change spec for GET /doc/file/:id
